# Software-de-Visualizacao-Grafica

./: CMakeLists.txt  app.py  buffer.py  callbacks.py  config.py  pipeline.py  shading.py  superfice.py  utils.py  visibilidade.py
Trabalho 2 CG/: glad.c  pipeline_tela.cpp  pipeline_transf.cpp  surface.cpp
src/: Main.cpp  main.h  pipeline_tela.cpp  pipeline_transf.cpp  spline_Surface.cpp  surface  teste.cpp
